--- a/style.css
+++ b/style.css
@@ -15,3 +15,19 @@ p {
 img {
   float: left;
 }
+
+div {
+  display: inline-block;
+  width: 300px;
+}
+
+#left {
+  float: left;
+}
+
+#center {
+}
+
+#right {
+  float: right;
+}
